--- a/projekt2/css/style.css
+++ b/projekt2/css/style.css
@@ -5,45 +5,56 @@
 }
 
 body {
-    background: #eee;
     font-family: 'Comfortaa', cursive;
 }
 
 .text-primary {
-    color: #93cb52;
+    color: red;
 }
 
 p {
     margin: 0.75rem 0;
 }
 
+#logo {
+    font-size: larger;
+    font-weight: lighter;
+}
+
 #navbar {
     background: #333;
-    color: #fff;
+    color: white;
+    padding: 1rem;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0;
+}
 
-    padding: 1rem;
+#navbar a {
+    color: white;
+    text-decoration: none;
 }
 
 #navbar ul {
     display: flex;
     list-style: none;
-}
-
-#navbar a {
-    color: #fff;
+    align-items: center;
 }
 
 #navbar ul li a {
-
+    padding: 0.75rem;
+    margin: 0 0.25rem;
 }
 
 #navbar ul li a:hover {
-    background-color: #93cb52;
-    border-radius: 2px;
+    background: darkred;
+    border-radius: 10px;
 }
 
-#navbar {
-    position: sticky;
+#showcase {
+    background: #333 url("https://images.unsplash.com/photo-1638262052649-9a9e0edc0b51?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80") no-repeat center center/cover;
+    height: 100vh;
 }
