--- a/projekt2/css/style.css
+++ b/projekt2/css/style.css
@@ -12,6 +12,11 @@ body {
     color: red;
 }
 
+.text-secondary {
+    color: black;
+    font-weight: bolder;
+}
+
 p {
     margin: 0.75rem 0;
 }
@@ -54,8 +59,117 @@ p {
     border-radius: 10px;
 }
 
+/* Showcase */
+
 #showcase {
     background: #333 url("https://images.unsplash.com/photo-1638262052649-9a9e0edc0b51?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80") no-repeat center center/cover;
     height: 100vh;
+    color: white;
 }
 
+#showcase .showcase-content {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    padding: 0 2rem;
+    background-color: rgba(0,0,0,0.5);
+}
+
+/* Utility Classes */
+
+.l-heading {
+    font-size: 4rem;
+    margin-bottom: 0.75rem;
+    line-height: 1.1;
+}
+
+.lead {
+    font-size: 1.3rem;
+    margin-bottom: 2rem;
+}
+
+.btn {
+    display: inline-block;
+    color: white;
+    background: red;
+    padding: 0.5rem 2rem;
+    border: none;
+    border-radius: 5px;
+}
+
+.btn:hover {
+    background: darkred;
+}
+
+.btn-dark {
+    background: #333;
+    color: white;
+}
+
+.bg-dark {
+    background: #333333;
+    color: #fff;
+}
+
+.bg-light {
+    background: #f4f4f4;
+    color: #333333;
+}
+
+h1 {
+    color: white;
+}
+
+.lead {
+    color: white;
+}
+
+/* Section: O hře */
+.container {
+    max-width: 1100px;
+    margin: auto;
+    padding: 0 2rem;
+    overflow: hidden;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.m-heading {
+    font-size: 2rem;
+    margin-bottom: 0.75rem;
+    line-height: 1.1;
+}
+
+.py-1 {
+    padding: 1.5rem 0;
+}
+
+.py-2 {
+    padding: 2rem 0;
+}
+
+.py-3 {
+    padding: 3rem 0;
+}
+
+#what .items {
+    display: flex;
+    padding: 1rem;
+}
+
+#what .item {
+    text-align: center;
+    padding: 1rem;
+}
+
+#what .items .item i {
+    background: darkred;
+    padding: 1rem;
+    border-radius: 50%;
+    margin-bottom: 1rem;
+}
