--- a/projekt2/css/style.css
+++ b/projekt2/css/style.css
@@ -13,6 +13,10 @@ body {
     color: red;
 }
 
+.bg-primary {
+    background-color: red;
+}
+
 .text-secondary {
     color: black;
     font-weight: bolder;
@@ -239,4 +243,23 @@ h1 {
 
 #aboutgame .aboutgame-img {
     background: url("https://images.unsplash.com/photo-1583312736215-675896e24e27?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1780&q=80") no-repeat center center/cover;
+}
+
+#images .items {
+    display: flex;
+    justify-content: space-between;
+}
+
+#images .items img {
+    display: block;
+    margin: auto;
+    width: 80%;
+}
+
+#contact {
+    display: flex;
+}
+
+#contact div {
+    flex: 1;
 }
