--- a/projekt2/css/widescreen.css
+++ b/projekt2/css/widescreen.css
@@ -1,9 +1,9 @@
-#about .items .item {
+#what .items .item {
     display: flex;
     text-align: left;
 }
 
-#about .items .item i {
+#what .items .item i {
     align-self: center;
     margin-right: 1.3rem;
     margin-bottom: 0;
