--- a/projekt2/css/mobile.css
+++ b/projekt2/css/mobile.css
@@ -1,14 +1,14 @@
-#what .items {
+#about .items {
     display: block;
     padding: 1rem;
 }
 
-#what .items .item {
+#about .items .item {
     display: flex;
-    text-align: center;
+    text-align: left;
 }
 
-#what .items .item i {
+#about .items .item i {
     align-self: center;
     margin-right: 1.3rem;
     margin-bottom: 0;
@@ -19,7 +19,28 @@
 @media screen and (max-width: 500px) {
     #navbar {
         flex-direction: column;
-        align-items: center;
+        align-items: stretch;
+        text-align: center;
+    }
+
+    #navbar #hambac {
+        display: none;
+    }
+
+    #navbar ul {
+        flex-direction: column;
+        align-items: stretch;
+        display: none;
+    }
+
+    #navbar ul li {
+        padding: 0.5rem;
+        border-bottom: grey 1px dotted;
+    }
+
+    #navbar ul li:first-child {
+        margin-top: 0.8rem;
+        border-top: grey 1px dotted;
     }
 
     #navbar #logo {
@@ -29,7 +50,7 @@
 
     .l-heading {
         letter-spacing: 0;
-        font-size: 2rem;
+        font-size: 3rem;
     }
 
     #project {
@@ -54,6 +75,10 @@
     .l-heading {
         font-size: 2rem;
         letter-spacing: 0;
+    }
+
+    #navbar {
+        align-items: flex-start;
     }
 
     #navbar ul {
