--- a/freecodecamp/tribute-page-odevzdani-mix-zdroju/styles.css
+++ b/freecodecamp/tribute-page-odevzdani-mix-zdroju/styles.css
@@ -1,55 +1,100 @@
+html {
+    font-size: 15px;
+}
+
 body {
-    font-family: sans-serif;
+    font-family: Times New Roman, sans-serif;
+    font-size: 1.5rem;
+    line-height: 1;
     text-align: center;
+    color: #333;
+    margin: 0;
 }
 
-#main {
-    max-width: 800px;
-    margin: 0 auto;
+h1 {
+    font-size: 3rem;
+    margin-bottom: 0;
 }
 
-#title {
-    font-size: 2em;
-    margin: 20px 0;
+@media (max-width: 460px) {
+    h1 {
+        font-size: 3rem;
+        line-height: 1.2;
+    }
 }
 
-#img-div {
-    position: relative;
+h2 {
+    font-size: 3rem;
 }
 
-#image {
-    max-width: 100%;
-    max-height: 400px;
-    display: block;
-    margin: 0 auto;
-}
-
-#img-caption {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    background-color: rgba(0,0,0,0.4);
-    color: white;
-    padding: 10px;
-    margin-top: 50px;
-    margin-bottom: 50px;
-}
-
-#tribute-info {
-    margin: 20px 0;
-}
-
-#tribute-link {
-    display: inline-block;
-    margin: 20px 0;
-    color: blue;
-    text-decoration: none;
-}
-
-#tribute-link:hover {
+a {
     color: darkblue;
 }
 
-p {
-    margin-bottom: 22px;
+a:visited {
+    color: rebeccapurple;
+}
+
+#main {
+    margin: 30px 30px;
+    padding: 20px;
+    border-radius: 10px;
+    background: #eeeeee;
+}
+
+@media (max-width: 460px) {
+    #main {
+        margin: 0;
+    }
+}
+
+img {
+    max-width: 100%;
+    display: block;
+    height: auto;
+    margin: 0 auto;
+}
+
+#img-div {
+    background: lightgrey;
+    padding: 5px;
+    margin: 0;
+}
+
+#img-caption {
+    margin: 15px 0 10px 0;
+}
+
+@media (max-width: 460px) {
+    #img-caption {
+        font-size: 1rem;
+    }
+}
+
+#headline {
+    margin: 70px 0;
+    text-align: center;
+    font-size: 2rem;
+}
+
+ul {
+    max-width: 550px;
+    margin: 0 auto 50px auto;
+    text-align: left;
+    line-height: 1.5;
+}
+
+li {
+    margin: 10px 0;
+}
+
+blockquote {
+    font-style: italic;
+    max-width: 545px;
+    margin: 0 auto 50px auto;
+    text-align: left;
+}
+
+#tribute-info {
+    margin-top: 2rem;
 }
