--- a/freecodecamp/personalportfolio/styles.css
+++ b/freecodecamp/personalportfolio/styles.css
@@ -1,54 +1,91 @@
-@media (min-height: 600px) {
-    #welcome-section {
-        height: 100vh;
-    }
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: rgb(182, 210, 210);
 }
 
-#welcome-section {
-    background-image: url('https://images.unsplash.com/photo-1494500764479-0c8f2919a3d8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
-    background-size: cover;
-    height: 100vh;
+a {
+    color: red;
 }
 
-#navbar {
-    background-color: #333;
-    color: #fff;
-    font-size: 1.2rem;
-    position: sticky;
-    top: 0;
+h1 {
+    margin-bottom: 5px;
 }
 
-#navbar ul {
+.nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: darkred;
+    color: rgb(123, 67, 67);
+    padding: 1em;
+}
+
+.nav-list {
     list-style: none;
+    margin: 0;
+    padding: 0;
     display: flex;
 }
 
-#navbar li {
-    margin-right: 1rem;
+.nav-list li {
+    margin: 0 1em;
 }
 
-#navbar a {
+.nav-list a {
+    color: white;
     text-decoration: none;
-    color: #fff;
-    padding: 1rem;
+}
+
+#welcome-section {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#projects {
+    background-color: #f4f4f4;
+    padding: 2em 1em;
 }
 
 .project-tile {
-    border: 1px solid #ccc;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-    margin: 1rem;
-    padding: 1rem;
+    background-color: white;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+    padding: 1em;
+}
+
+.project-tile h3 {
+    margin-top: 0
+}
+
+footer {
+    text-align: center;
+    padding: 1em;
+}
+
+.project-tile {
+    margin-bottom: 20px;
+    background-color: #b9b7b7;
+}
+
+#contact {
     text-align: center;
 }
 
-#profile-link {
-    background-color: #333;
-    color: #fff;
-    padding: 1rem;
-    text-decoration: none;
+footer {
+    font-size: small;
 }
 
-body {
-    font-family: 'Open Sans', sans-serif;
+h2 {
+    text-align: center;
+    margin-bottom: 10%;
 }
 
+h4 {
+    font-size: 25px;
+    margin-top: 2%;
+    margin-bottom: 3%;
+}
